--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           >
         </p>
           <div class="btn-div"><button id="btn-id" class="btn-class" onclick="myFunction()">Check Text</button></div>
-          <p id = 'output-text-1' class="output-area"> ... </p>
-          <p id = 'output-text-2' class="output-area"> ..... </p>
+          <p id = 'output-text-1' class="output-area"></p>
+          <p id = 'output-text-2' class="output-area"></p>
     </div>
     <script src="tribute.js"></script>
     <script src="mention.js"></script>
